--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -14,13 +14,13 @@ body {
     position: sticky;
     top: 0;
     z-index: 1000;
-    background: #002fff56;
+    background: #011c9680;
     box-shadow: 0 8px 12px #0025f5b0;
     border-radius: 24px;
     margin: 0 auto;
     max-width: 1200px;
-    min-width: 200px;
-    min-height: 100px;
+    min-width: auto;
+    min-height: auto;
     padding: 16px 32px;
 }
 
@@ -30,29 +30,32 @@ body {
     align-items: center;
     flex-wrap: nowrap;
     gap: 30px;
-
     padding: 16px 32px;
     margin: 0 auto;
 }
 
 .nav-logo {
     display: flex;
+    flex-direction: row;
     align-items: center;
     gap: 10px;
     font-size: 28px;
-    white-space: nowrap;
 }
 
 .nav-logo img {
     width: 50px;
     height: auto;
+    gap: 20px;
 }
 
 .nav-menu {
     display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
     list-style: none;
-    gap: 20px;
-    white-space: nowrap;
 }
 
 .nav-link {
