--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background: #4d4b4d;
+    background: #180146;
     color: white;
 }
 
@@ -14,13 +14,13 @@ body {
     position: sticky;
     top: 0;
     z-index: 1000;
-    background: #011c9680;
-    box-shadow: 0 8px 12px #0025f5b0;
+    background: linear-gradient(128deg, rgba(8, 8, 222, 0.33) 10%, rgba(4, 4, 68, 0.566) 100%);
+    box-shadow: 0 8px 12px #3900f5b0;
+    border: 3px rgba(72, 0, 255, 0.547) solid;
     border-radius: 24px;
     margin: 0 auto;
     max-width: 1200px;
     min-width: auto;
-    min-height: auto;
     padding: 16px 32px;
 }
 
@@ -48,6 +48,14 @@ body {
     gap: 20px;
 }
 
+.nav-logo:hover{
+    transform: translateY(-4px);
+    transition: all 0.68s ease-in;
+    color: rgba(160, 161, 245, 0.985);
+    text-decoration: none;
+    font-size: 32px;
+}
+
 .nav-menu {
     display: flex;
     flex-direction: row-reverse;
@@ -56,6 +64,17 @@ body {
     align-content: center;
     align-items: center;
     list-style: none;
+}
+
+.nav-link:hover {
+    transform: translateY(-4px);
+    border-radius: 16px;
+    background: rgba(27, 3, 73, 0.678);
+    border: 2px rgba(107, 0, 247, 0.638) solid;
+    box-shadow: 0 2px 21px rgba(83, 3, 163, 0.488);
+    transition: all 0.5s ease-out;
+    color: rgba(181, 181, 181, 0.985);
+    text-decoration: none;
 }
 
 .nav-link {
