--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -14,9 +14,9 @@ body {
     position: sticky;
     top: 0;
     z-index: 1000;
-    background: linear-gradient(128deg, rgba(8, 8, 222, 0.33) 10%, rgba(4, 4, 68, 0.566) 100%);
-    box-shadow: 0 8px 12px #3900f5b0;
-    border: 3px rgba(72, 0, 255, 0.547) solid;
+    background: linear-gradient(128deg, rgba(15, 171, 206, 0.688) 10%, rgba(5, 52, 77, 0.666) 100%);
+    box-shadow: 0 8px 12px #02b7ff97;
+    border: 3px rgba(0, 250, 225, 0.547) solid;
     border-radius: 24px;
     margin: 0 auto;
     max-width: 1200px;
@@ -51,9 +51,15 @@ body {
 .nav-logo:hover{
     transform: translateY(-4px);
     transition: all 0.68s ease-in;
-    color: rgba(160, 161, 245, 0.985);
+    color: rgba(255, 255, 255, 0.985);
     text-decoration: none;
     font-size: 32px;
+}
+
+.nav-logo img:hover {
+    transform: translateY(-4px);
+    transition: all 0.56s ease-out;
+    width: 55px;
 }
 
 .nav-menu {
@@ -73,13 +79,13 @@ body {
     border: 2px rgba(107, 0, 247, 0.638) solid;
     box-shadow: 0 2px 21px rgba(83, 3, 163, 0.488);
     transition: all 0.5s ease-out;
-    color: rgba(181, 181, 181, 0.985);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
 .nav-link {
     font-size: 16px;
-    color: white;
+    color: rgba(255, 255, 255, 0.799);
     text-decoration: none;
     padding: 8px 16px;
     font-weight: 600;
