--- a/assets/css/trainers.css
+++ b/assets/css/trainers.css
@@ -73,9 +73,17 @@
     height: auto;
     object-fit: contain;
     border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    background: white;
     border:rgba(97, 4, 168, 0.792) solid 4px;
     box-shadow: 0 4px 12px rgba(140, 78, 255, 0.537);
     object-fit: contain;   
+}
+
+.trainer-image:hover{
+    box-shadow: 0 8px 21px rgba(13, 204, 188, 0.527);
+    border: rgba(26, 145, 161, 0.567) solid;
 }
 
 .trainer-info {
